fixed button spacing issue
applied a gap to buttons container

--- a/index.css
+++ b/index.css
@@ -89,6 +89,7 @@ h4 {
 
 .buttons {
     width: 100%;
+    gap: 0 .5rem;
 }
 
 .button {
